# wgp-reboot

./: .gitignore  README.md
backend/: Cargo.toml  config.toml
backend/src/: config.rs  entities.rs  main.rs  message_handler.rs  proxy.rs  proxy_handler.rs  router.rs
backend/src/message/: db.rs  entities.rs  error.rs  handler.rs  mod.rs  types.rs  utils.rs
backend/src/message/ntor/: client.rs  common.rs  mod.rs  server.rs  utils.rs
backend/src/message/types/: mod.rs  other.rs  request.rs  response.rs
backend/src/proxy/: handler.rs  mod.rs
backend/src/router/: mod.rs  types.rs  wgp.rs
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  utils.ts
frontend/src/components/: GetPictures.vue  GetPoems.vue  HomeView.vue  Login.vue  Profile.vue  Register.vue
frontend/src/router/: index.ts
