[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
log = "0.4.26"
serde_json = "1.0.140"
pingora = { git = "https://github.com/dtpthao/pingora.git", tag = "0.4.1", features = [ "lb" ]  }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
clap = { version = "3.2.25", features = ["derive"] }
env_logger = "0.11.7"
chrono = "0.4.41"
config = "0.15.11"
toml = "0.8.22"
once_cell = "1.21.3"
regex = "1.11.1"
image = "0.25.5"

