[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
log = "0.4.26"
serde_json = "1.0.140"
pingora = { git = "https://github.com/dtpthao/pingora.git", tag = "0.4.1", features = [ "lb" ]  }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
clap = { version = "3.2.25", features = ["derive"] }
env_logger = "0.11.7"
chrono = "0.4.41"
config = "0.15.11"
toml = "0.8.22"
once_cell = "1.21.3"
regex = "1.11.1"
jsonwebtoken = "9.3.1"

#ntor
ring = "0.17.8"
hmac = "0.12"
sha2 = "0.10"
curve25519-dalek = "4.1.1"
x25519-dalek = {version="^2.0.1", features = ["static_secrets"] }
rand_core = {version="0.6.4", features = ["std"]}
rand = "0.9.1"

#
uuid = { version = "1.16.0", features = ["v4"] }